Just another update

--- a/Python średnio zaawansowany/3. Protokół HTTP.md
+++ b/Python średnio zaawansowany/3. Protokół HTTP.md
@@ -1,7 +1,7 @@
 ### 3.1 HTML
 Punktem wyjścia do zrozumienia wielu tematów związanych z wykorzystaniem protokołu HTTP (*HyperText Transfer Protocol*) jest podstawowa znajomość języka HTML (*HyperText Markup Language*). Szczególnie istotne jest to podczas web scrapingu, czyli procesu pozyskiwania danych znajdujących się na stronach www.
 
-HTML to język znaczników, który definiuje zawartość strony internetowej. W różnych znacznikach (ang. *tags*) znajdują się poszczególne elementy widoczne na stronie, takie jak np. paragrafy tekstu, linki, tabele, nagłówki itd. Poniżej zamieszczony został przykładowy kod HTML, który opisuje strukturę bardzo prostej strony internetowej. Właściwa zawartość strony (to, co widzimy w przeglądarce) znajduje się wewnątrz znacznika `<body> </body>`. Są w nim zagnieżdżone kolejne tagi – w tym przypadku jeden: `<div> </div>`. Cała reszta to metadane.
+HTML to język znaczników, który definiuje zawartość strony internetowej. W różnych znacznikach – zwanych również "tagami" – znajdują się poszczególne elementy widoczne na stronie, takie jak np. paragrafy tekstu, linki, tabele, nagłówki itd. Poniżej zamieszczony został przykładowy kod HTML, który opisuje strukturę bardzo prostej strony internetowej. Właściwa zawartość strony (to, co widzimy w przeglądarce) znajduje się wewnątrz znacznika `<body> </body>`. Są w nim zagnieżdżone kolejne tagi – w tym przypadku jeden: `<div> </div>`. Cała reszta to metadane.
 
 ```html
 <!DOCTYPE html>
@@ -23,24 +23,66 @@ Poniżej znajduje się opis kilku najczęściej spotykanych znaczników HTMLa.
 
 ### Naglówek
 
+Nagłówek artykułu czy podtytuł nad paragrafem to przykładowe sytuacje, gdzie znajduje zastosowanie ten znacznik. Nagłówki często ułożone są w hierarchii – tak jak na tej stronie.
+
+```html
+<h1>Nagłówek pierwszego rzędu</h1>
+
+<h2>Nagłówek drugiego rzędu</h2>
+
 ...
+
+<h6>Nagłówek szóśtego rzędu</h6>
+```
+
 ### Link
 
-...
+Znacznik `<a>` tworzy hiperłącza, które kierują nas na inne strony www lub nasze własne podstrony. Przykłady zastosowań to tworzenie linków do innych witryn, nawigacja w obrębie strony oraz otwieranie linków w nowych oknach przeglądarki.
+
+```html
+<a href='https://example.org'>Tekst hiperłącza</a>
+
+<a href='subpage/index.html'>Tekst hiperłącza</a>
+```
+
+
 ### Paragraf
 
-...
+Dłuższy kawałek tekstu przechowujemy zwykle w paragrafie.
+
+```python
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+```
 
 ### Lista 
 
-...
+Jeśli na stronie znajduje się wiele podobnie wyglądająych elementów, prawdopodobnie należą one do jednej listy. Lista może być uporządkowana (***o**rdered **l**ist*) lub nieuporządkowana (***u**nordered **l**ist*). Elementy tej pierwszej często są ponumerowane.
+
+Lista składa się z ***l**ist **i**temów*.
+
+```html
+<ul> 
+    <li>Element 1</li>
+    <li>Element 2</li>
+    <li>Element 3</li>
+</ul>
+
+
+<ol> 
+    <li>Element 1</li>
+    <li>Element 2</li>
+    <li>Element 3</li>
+</ol>
+```
+
+
 ### Div
 
 ...
 
 ---
 
-Aby sprawdzić jak na stronie www będzie wyglądał fragment kodu HTML znajdujący się w sekcji `<body>`, można użyć [narzędzia Codepen](https://codepen.io/pen/). Oprócz samego HTMLa jest tam możliwość zdefiniowania stylów w języku CSS oraz skryptów w JS.
+Aby sprawdzić jak na stronie www będzie wyglądał fragment kodu HTML znajdujący się w sekcji `<body>`, można użyć [narzędzia Codepen](https://codepen.io/pen/). Oprócz samego HTMLa jest tam możliwość zdefiniowania stylów (wyglądu strony) w języku CSS oraz skryptów w JavaScripcie (czyli mechanizmów, które możemy zaprogramować).
 
 
 
