Just another update

--- a/Python średnio zaawansowany/3. Protokół HTTP.md
+++ b/Python średnio zaawansowany/3. Protokół HTTP.md
@@ -50,8 +50,9 @@ Znacznik `<a>` tworzy hiperłącza, które kierują nas na inne strony www lub n
 
 Dłuższy kawałek tekstu przechowujemy zwykle w paragrafie.
 
-```python
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+```html
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 ```
 
 ### Lista 
@@ -78,11 +79,22 @@ Lista składa się z ***l**ist **i**temów*.
 
 ### Div
 
-...
+Div to uniwersalny znacznik, który nie ma jednego szczególnego zastosowania. Może być kontenerem, wewnątrz którego znajdą się kolejne tagi.
+
+```html
+<div> Div </div>
+
+
+<div> 
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+</div>
+```
 
 ---
 
-Aby sprawdzić jak na stronie www będzie wyglądał fragment kodu HTML znajdujący się w sekcji `<body>`, można użyć [narzędzia Codepen](https://codepen.io/pen/). Oprócz samego HTMLa jest tam możliwość zdefiniowania stylów (wyglądu strony) w języku CSS oraz skryptów w JavaScripcie (czyli mechanizmów, które możemy zaprogramować).
+Aby sprawdzić, jak na stronie www będzie wyglądał fragment kodu HTML znajdujący się w sekcji `<body>`, można użyć [narzędzia Codepen](https://codepen.io/pen/). Oprócz samego HTMLa jest tam możliwość zdefiniowania stylów (wyglądu strony) w języku CSS oraz skryptów w JavaScripcie (czyli mechanizmów, które możemy zaprogramować).
 
 
 
