Just another update

--- a/Python średnio zaawansowany/3. Protokół HTTP.md
+++ b/Python średnio zaawansowany/3. Protokół HTTP.md
@@ -79,7 +79,7 @@ Lista składa się z ***l**ist **i**temów*.
 
 ### Div
 
-Div to uniwersalny znacznik, który nie ma jednego szczególnego zastosowania. Może być kontenerem, wewnątrz którego znajdą się kolejne tagi.
+Div to uniwersalny znacznik, który nie ma jednego, szczególnego zastosowania. Może być kontenerem, wewnątrz którego znajdą się kolejne tagi.
 
 ```html
 <div> Div </div>
@@ -105,13 +105,34 @@ Aby sprawdzić, jak na stronie www będzie wyglądał fragment kodu HTML znajduj
 ---
 &nbsp;
 ### 3.2 Podstawy działania protokołu HTTP
+Protokół HTTP (ang. *HyperText Transfer Protocol*) jest standardem komunikacyjnym używanym do przesyłania danych za pośrednictwem internetu. Pozwala na komunikację między serwerem a tzw. klientem, którym może być np. przeglądarka.
+
+HTTP służy głównie do przekazywania informacji w formie tekstowej, takiej jak strony internetowe, ale również obrazów czy plików. HTTP opiera się na modelu żądanie-odpowiedź (*request-response*), gdzie klient wysyła żądanie do serwera, a serwer odpowiada przesłaniem odpowiednich danych.
+
+![[http.png]]
+
+Istnieją różne rodzaje requestów, są to tzw. metody HTTP. Do najbardziej popularnych należą:
+- GET - służy do pobierania danych z serwera
+- POST - służy do przesyłania danych do serwera, na przykład formularzy
+- PUT - służy do aktualizacji lub utworzenia zasobu na serwerze
+- DELETE - służy do żądania usunięcia określonego zasobu na serwerze
+
+
+Po otrzymaniu żądania, serwer wysyła odpowiedź. Składają się na nią przede wszystkim:
+- kod odpowiedzi
+- tekst odpowiedzi
+
+**Kod** służy do określenia statusu odpowiedzi. Zawiera informację o tym, czy wszystko poszło po naszej mysli, czy pojawiły się jakieś błędy. Opis poszczególnych kodów można znaleźć m.in. [na wikipedii](https://pl.wikipedia.org/wiki/Kod_odpowiedzi_HTTP).
+
+**Tekst** odpowiedzi to właściwe dane, które wysłał serwer. Może to być np. kod HTML albo dane w formacie JSON.
+
 
 ---
 ---
 ---
 &nbsp;
 ### 3.3 Web scraping
-
+.
 ---
 ---
 ---
