Just another update

--- a/Python średnio zaawansowany/3. Protokół HTTP.md
+++ b/Python średnio zaawansowany/3. Protokół HTTP.md
@@ -132,7 +132,81 @@ Po otrzymaniu żądania, serwer wysyła odpowiedź. Składają się na nią prz
 ---
 &nbsp;
 ### 3.3 Web scraping
-.
+Web scraping jest procesem, który polega na maszynowym pobieraniu danych znajdujących się na stronach internetowych. Polega on na wysyłaniu requestów HTTP do serwera z poziomu kodu pisanego przez programistę. W Pythonie istnieją różne frameworki do web scrapingu. Jeden z nich polega na wykorzystaniu bibliotek `requests` oraz `bs4`.
+
+```python
+import requests
+from bs4 import BeautifulSoup
+```
+
+Pierwszym krokiem w procesie scrapingu jest wykonanie żądania do określonego zasobu na serwerze. Najczęściej jest to request typu GET.
+
+
+```python
+quotes_url = "https://quotes.toscrape.com/"
+
+response = requests.get(quotes_url)
+print(response)
+
+# <Response [200]>
+```
+
+Funkcja `reuests.get()`  zwraca obiekt typu `requests.models.Response`. Spośród wszystkich atrybutów tego obiektu, najbardziej interesuje nas atrybut `text`, ponieważ to tam znajduje się tekst odpowiedzi. Jest nim najczęściej kod HTML, który w dalszej kolejności możemy zamienić na tzw. zupę:
+
+```python
+soup = BeautifulSoup(response.text, 'html.parser')
+```
+
+Zupa to obiekt typu `bs4.BeautifulSoup`, który pozwala w prosty sposób wyszukiwać poszczególne znaczniki w kodzie HTML.
+
+---
+
+Aby znaleźć pierwszy znacznik danego typu, np. `<a>`, używamy metody `find()`:
+
+```python
+soup.find("a")
+```
+
+Zwraca ona obiekt reprezentujacy HTMLowy tag. Gdybyśmy chcieli wyszukać wszystkie wystąpienia tego znacznika, wywołujemy metodę `find_all()`. Zwraca ona listę tagów.
+
+```python
+soup.find_all("a")
+```
+
+---
+
+Kolejnym krokiem jest wydobycie ze znacznika jego zawartości, czyli znajdującego się w nim tekstu. W tym celu należy odwołać się do atrybutu `text`:
+
+```python
+a_tag = soup.find("a")
+
+a_tag.text
+```
+
+---
+
+Istnieje również możliwość doprecyzowania tego, który konkretnie znacznik nas interesuje. Tagi HTML zazwyczaj posiadają informację o tzw. klasie CSS. Klasa taka jest zbiorem reguł używanych do nadania elementowi strony konkretnego wyglądu. Znacznik, który odwołuje się do klasy "style" wygląda następująco:
+
+```html
+<div class='style'>Zawartość tekstowa znacznika</div>
+```
+
+Jeśli więc chcemy znaleźć w zupie tego diva, który posiada klasę "style", należy określić to w metodzie `find()` lub `find_all()`:
+
+```python
+div_tag = soup.find("div", class_="style")
+
+div_tag.text
+# Zawartość tekstowa znacznika
+```
+
+Istnieją również inne sposoby na znalezienie tego znacznika, który nas interesuje.
+
+Ważne jest, aby przed wywołaniem metody `find()` lub `find_all()` sprawdzić w źródle strony, w jakim znaczniku znajduje się interesująca nas treść oraz jaką posiada klasę CSS.
+
+
+
+
 ---
 ---
 ---
