Just another update

--- a/Python średnio zaawansowany/3. Protokół HTTP.md
+++ b/Python średnio zaawansowany/3. Protokół HTTP.md
@@ -132,7 +132,7 @@ Po otrzymaniu żądania, serwer wysyła odpowiedź. Składają się na nią prz
 ---
 &nbsp;
 ### 3.3 Web scraping
-Web scraping jest procesem, który polega na maszynowym pobieraniu danych znajdujących się na stronach internetowych. Polega on na wysyłaniu requestów HTTP do serwera z poziomu kodu pisanego przez programistę. W Pythonie istnieją różne frameworki do web scrapingu. Jeden z nich polega na wykorzystaniu bibliotek `requests` oraz `bs4`.
+Web scraping jest procesem, który polega na maszynowym pobieraniu danych znajdujących się na stronach internetowych. Polega on na wysyłaniu requestów HTTP do serwera z poziomu kodu pisanego przez programistę (zamiast w przeglądarce). W Pythonie istnieją różne frameworki do web scrapingu. Jeden z nich polega na wykorzystaniu bibliotek `requests` oraz `bs4`.
 
 ```python
 import requests
@@ -157,20 +157,25 @@ Funkcja `reuests.get()`  zwraca obiekt typu `requests.models.Response`. Spośró
 soup = BeautifulSoup(response.text, 'html.parser')
 ```
 
-Zupa to obiekt typu `bs4.BeautifulSoup`, który pozwala w prosty sposób wyszukiwać poszczególne znaczniki w kodzie HTML.
+Zupa to obiekt typu `bs4.BeautifulSoup`, który pozwala w prosty sposób wyszukiwać poszczególne treści na stronie, a ściślej – w kodzie HTML.
 
 ---
 
-Aby znaleźć pierwszy znacznik danego typu, np. `<a>`, używamy metody `find()`:
+Aby znaleźć pierwszy z kolei znacznik danego typu, np. `<a>`, używamy metody `find()`:
 
 ```python
 soup.find("a")
+
+# <a href="/" style="text-decoration: none">Quotes to Scrape</a>
 ```
 
 Zwraca ona obiekt reprezentujacy HTMLowy tag. Gdybyśmy chcieli wyszukać wszystkie wystąpienia tego znacznika, wywołujemy metodę `find_all()`. Zwraca ona listę tagów.
 
 ```python
 soup.find_all("a")
+
+# [<a href="/" style="text-decoration: none">Quotes to Scrape</a>,
+#  ..., ...]
 ```
 
 ---
@@ -181,17 +186,20 @@ Kolejnym krokiem jest wydobycie ze znacznika jego zawartości, czyli znajdujące
 a_tag = soup.find("a")
 
 a_tag.text
+# Quotes to Scrape
 ```
 
 ---
 
-Istnieje również możliwość doprecyzowania tego, który konkretnie znacznik nas interesuje. Tagi HTML zazwyczaj posiadają informację o tzw. klasie CSS. Klasa taka jest zbiorem reguł używanych do nadania elementowi strony konkretnego wyglądu. Znacznik, który odwołuje się do klasy "style" wygląda następująco:
+Istnieje również możliwość doprecyzowania tego, który konkretnie znacznik nas interesuje. Tagi HTML zazwyczaj posiadają informację o tzw. klasie CSS. Klasa taka jest zbiorem reguł używanych do nadania elementowi strony konkretnego wyglądu. W procesie web scrapingu wygląd elementu (kolor, rozmiar itp.) nie ma dla nas znaczenia. Możemy jednak wykorzystać fakt, że informacja o klasie często znajduje się w znacznikach.
+
+Tag, który odwołuje się do klasy "style" wygląda następująco:
 
 ```html
 <div class='style'>Zawartość tekstowa znacznika</div>
 ```
 
-Jeśli więc chcemy znaleźć w zupie tego diva, który posiada klasę "style", należy określić to w metodzie `find()` lub `find_all()`:
+Jeśli więc chcemy znaleźć w zupie takiego diva, który posiada klasę "style", należy określić to w metodzie `find()` lub `find_all()`:
 
 ```python
 div_tag = soup.find("div", class_="style")
