Just another update

--- a/Python średnio zaawansowany/3. Protokół HTTP.md
+++ b/Python średnio zaawansowany/3. Protokół HTTP.md
@@ -221,6 +221,45 @@ Ważne jest, aby przed wywołaniem metody `find()` lub `find_all()` sprawdzić w
 &nbsp;
 ### 3.4 JSON API
 
+Nie zawsze konieczne jest scrapowanie stron, żeby pozyskać interesujace nas dane. Alternatywą jest korzystanie z tzw. API (*Application Programming Interface*) czyli interfejsu, który został stworzony w celu komunikacji z daną usługą, poprzez wysyłanie odpowiednich requestów. W przeciwieństwie do web scrapingu jednak, API nie jest czymś czego możemy użyć w każdej sytuacji, ponieważ musi ono istnieć.
+
+Przykładowe instytucje/usługi, które wystawiają API to:
+- Główny Urząd Statystyczny
+- Narodowy Bank Polski
+- GitHub
+
+API mogą, ale nie muszą, służyć do pozyskiwania danych. Istnieją takie, które dostarczają np. danych pogodowych, finansowych itp. Nie jest to jednak jedyne zastosowanie API. W ogólności API mogą służyć do szeroko pojętej komunikacji między usługami z wykorzystaniem m.in. protokołu HTTP.
+
+---
+
+Korzystając z API najczęściej konieczne jest posiadanie specjalnego klucza, którym możemy się uwierzytelnić w usłudze. Aby go otrzymać, zwykle musimy się zarejestrować. 
+
+Sposób korzystania z API powinien być opisany w dokumentacji. Zazwyczaj jest tam instrukcja tworzenia adresów URL, które pozwalają dostać się pod określony zasób. Poniżej znajduje się przykład użycia API *currencylayer*.
+
+```python
+api_key = "..."  # use your key
+date = "2019-05-12"
+currencies_list = "EUR,PLN"
+
+
+url = f"http://api.currencylayer.com/historical?access_key={api_key}&date={date}&currencies={currencies_list}"
+
+# http://api.currencylayer.com/historical?access_key=...&date=2019-05-12&currencies=EUR,PLN
+```
+
+Tak sformatowany adres URL można wykorzystać do wysłania requestu. W wielu przypadkach możemy użyć zwykłej przeglądarki, wpisując do niej adres zasobu. Jeśli jednak chcemy przechwycić i przetworzyć output, lepiej będzie napisać skrypt, który to zrobi.
+
+```python
+import requests
+
+response = requests.get(url)
+response_json = response.json()
+```
+
+Dane w formacie JSON zostały przechwycone do słownika, który możemy dalej przetwarzać. Struktura takiego słownika często jest złożona, aby mogła oddać stopień złożoności modelu danych.
+
+
+
 ---
 ---
 ---
