Just another update

--- a/Python średnio zaawansowany/3. Protokół HTTP.md
+++ b/Python średnio zaawansowany/3. Protokół HTTP.md
@@ -226,7 +226,7 @@ Nie zawsze konieczne jest scrapowanie stron, żeby pozyskać interesujace nas da
 Przykładowe instytucje/usługi, które wystawiają API to:
 - Główny Urząd Statystyczny
 - Narodowy Bank Polski
-- GitHub
+- Allegro
 
 API mogą, ale nie muszą, służyć do pozyskiwania danych. Istnieją takie, które dostarczają np. danych pogodowych, finansowych itp. Nie jest to jednak jedyne zastosowanie API. W ogólności API mogą służyć do szeroko pojętej komunikacji między usługami z wykorzystaniem m.in. protokołu HTTP.
 
