--- a/Python średnio zaawansowany/8. Wyrażenia regularne.md
+++ b/Python średnio zaawansowany/8. Wyrażenia regularne.md
@@ -1,11 +1,144 @@
 ### 8.1 Wprowadzenie
-.
+Wyrażeń regularnych używamy wtedy, kiedy chcemy znaleźć w tekście fragmenty o określonym wzorcu, ale nie wskazując dosłownie jaki ciąg znaków nas interesuje. Poniżej dwa przykłady:
+
+1. Zadanie: znaleźć w poniższym tekście numer telefonu, czyli ciąg znaków o wzorcu xxx-xxx-xxx gdzie x oznacza dowolną cyfrę z zakresu 0-9:
+
+`Mój numer telefonu to 123-456-789, możesz do mnie zadzwonić.`
+
+Zadanie wydaje się proste, ale nie jest tak trywialne. W jaki sposób zaimplementować algorytm, który znajdzie wystąpienia danego patternu w tekście?
+
+---
+2. Zadanie: znaleźć w poniższym tekście adres mailowy:
+
+`Mój adres mailowy to abc@gmail.com, możesz do mnie napisać`
+
+Ponownie - jak zlokalizować ten fragment tekstu, w którym znajduje się adres mailowy?
+
+---
+Do rozwiązywania tego typu problemów służą wyrażenia regularne.
+
+
+
+
 ---
 ---
 ---
 &nbsp;
 ### 8.2 Proste patterny
-.
+### *r-string*
+
+Pracując z wyrażeniami regularnymi, dobrze jest znać r-stringa. To skrót od "*raw string*", czyli sposób zapisu stringa w Pythonie, który pozbawia znaczenia znaki specjalne. Przykładowo, jeśli wykonamy następujący kod:
+
+```python
+print('Hello\nworld\t.')
+
+# Hello
+# world	.
+```
+
+to  `\n` oraz `\t` wyprintują się jako znaki białe, ponieważ mają one w Pythonie specjalne znaczenie. Gdybyśmy chcieli wyprintować tego stringa w wersji surowej, czyli traktując każdy znak dosłownie, należy użyć r-stringa:
+
+```python
+print(r'Hello\nworld\t.')
+
+# Hello\nworld\t.
+```
+
+W niektórych patternach konieczne będzie używanie r-stringa, żeby otrzymać oczekiwany rezultat. Nie zawsze jest to niezbędne, jednak warto jest wyrobić sobie ten nawyk.
+
+### Znajdowanie patternów
+
+Zacznijmy od zaimportowania biblioteki `re` (*regular expressions*):
+
+```python
+import re
+```
+
+Przyda się również tekst, który będziemy przeszukiwać. Najlepiej taki, w którym jest wiele różnych rodzajów znaków:
+
+```python
+text_to_search = '''
+abcdefghijklmnopqurtuvwxyz
+ABCDEFGHIJKLMNOPQRSTUVWXYZ
+1234567890
+
+. ^ $ * + ? { } [ ] \ | ( )
+- _ = /
+
+253-234-623
+321-555-4321
+5135-2446-1533
+
+123.555.1234
+123*555*1234
+'''
+```
+
+Następny krok to stworzenie obiektu reprezentującego wyszukiwany wzorzec. Niech będzie on bardzo prosty.
+
+```python
+pattern = re.compile(r'abc')
+```
+
+Mając taki obiekt, możemy wywołać na nim metodę `finditer()`, która zwraca iterator. Iterując po nim, dostaniemy się do poszczególnych wystąpień wzorca w tekście. Jest tylko jedno takie wystąpienie:
+
+```python
+matches = pattern.finditer(text_to_search)
+matches
+
+# <callable_iterator at 0x7f87100592a0>
+
+for match in matches:
+    print(match)
+# <re.Match object; span=(1, 4), match='abc'>
+```
+
+Dopasowanie patternu do tekstu reprezentowane jest obiektem typu `re.Match`, który wskazuje na położenie wzorca w tekście. Są to znaki 1-4, ponieważ pierwszym znakiem przeszukiwanego stringa jest nowa linia, a podany przedział jest prawostronnie otwarty.
+
+---
+
+Jeśli użyjemy innego patternu – np. "555" – dostaniemy więcej wyników:
+
+```python
+pattern = re.compile('555')
+
+matches = pattern.finditer(text_to_search)
+
+for match in matches:
+    print(match)
+
+# <re.Match object; span=(120, 123), match='555'>
+# <re.Match object; span=(149, 152), match='555'>
+# <re.Match object; span=(162, 165), match='555'>
+```
+
+---
+
+W celu zmniejszenia objętości kodu zdefiniujemy funkcję, która dla wzorca oraz przeszukiwanego tekstu wyprintuje wszystkie dopasowania:
+
+```python
+def find_patterns(pattern, text_to_search):
+    pattern = re.compile(pattern)
+    matches = pattern.finditer(text_to_search)
+
+    for match in matches:
+        print(match)
+```
+
+```python
+find_patterns("123", text_to_search)
+
+# <re.Match object; span=(55, 58), match='123'>
+# <re.Match object; span=(145, 148), match='123'>
+# <re.Match object; span=(153, 156), match='123'>
+# <re.Match object; span=(158, 161), match='123'>
+# <re.Match object; span=(166, 169), match='123'>
+```
+
+
+Przydatnym narzędziem do testowania naszych patternów są strony takie jak ta: https://regex101.com/
+
+
 ---
 ---
 ---
