Just another update

--- a/Python średnio zaawansowany/8. Wyrażenia regularne.md
+++ b/Python średnio zaawansowany/8. Wyrażenia regularne.md
@@ -1,5 +1,5 @@
 ### 8.1 Wprowadzenie
-Wyrażeń regularnych używamy wtedy, kiedy chcemy znaleźć w tekście fragmenty o określonym wzorcu, ale nie wskazując dosłownie jaki ciąg znaków nas interesuje. Poniżej dwa przykłady:
+Wyrażeń regularnych używamy wtedy, kiedy chcemy znaleźć w tekście fragmenty o określonym wzorcu, ale niekoniecznie wskazując dosłownie jaki ciąg znaków nas interesuje. Poniżej dwa przykłady:
 
 1. Zadanie: znaleźć w poniższym tekście numer telefonu, czyli ciąg znaków o wzorcu xxx-xxx-xxx gdzie x oznacza dowolną cyfrę z zakresu 0-9:
 
