Just another update

--- a/Python średnio zaawansowany/8. Wyrażenia regularne.md
+++ b/Python średnio zaawansowany/8. Wyrażenia regularne.md
@@ -14,7 +14,7 @@ Zadanie wydaje się proste, ale nie jest tak trywialne. W jaki sposób zaimpleme
 
 Ponownie - jak zlokalizować ten fragment tekstu, w którym znajduje się adres mailowy?
 
----
+
 Do rozwiązywania tego typu problemów służą wyrażenia regularne.
 
 
@@ -44,7 +44,7 @@ print(r'Hello\nworld\t.')
 # Hello\nworld\t.
 ```
 
-W niektórych patternach konieczne będzie używanie r-stringa, żeby otrzymać oczekiwany rezultat. Nie zawsze jest to niezbędne, jednak warto jest wyrobić sobie ten nawyk.
+Pracując z wyrażeniami regularnymi czasami konieczne będzie używanie r-stringa, żeby otrzymać oczekiwany rezultat. Nie zawsze jest to niezbędne, jednak warto jest wyrobić sobie ten nawyk.
 
 ### Znajdowanie patternów
 
