Just another update

--- a/Python średnio zaawansowany/8. Wyrażenia regularne.md
+++ b/Python średnio zaawansowany/8. Wyrażenia regularne.md
@@ -93,7 +93,7 @@ for match in matches:
 # <re.Match object; span=(1, 4), match='abc'>
 ```
 
-Dopasowanie patternu do tekstu reprezentowane jest obiektem typu `re.Match`, który wskazuje na położenie wzorca w tekście. Są to znaki 1-4, ponieważ pierwszym znakiem przeszukiwanego stringa jest nowa linia, a podany przedział jest prawostronnie otwarty.
+Dopasowanie patternu do tekstu (czyli *match*) reprezentowane jest obiektem typu `re.Match`. Wskazuje on na położenie wzorca w tekście. Są to znaki 1-4, ponieważ pierwszym znakiem przeszukiwanego stringa jest nowa linia, a ponadto podany przedział jest prawostronnie otwarty.
 
 ---
 
@@ -114,7 +114,7 @@ for match in matches:
 
 ---
 
-W celu zmniejszenia objętości kodu zdefiniujemy funkcję, która dla wzorca oraz przeszukiwanego tekstu wyprintuje wszystkie dopasowania:
+W celu zmniejszenia objętości kodu, zdefiniujemy funkcję, która dla wzorca oraz przeszukiwanego tekstu wyprintuje wszystkie dopasowania:
 
 ```python
 def find_patterns(pattern, text_to_search):
@@ -136,7 +136,9 @@ find_patterns("123", text_to_search)
 ```
 
 
-Przydatnym narzędziem do testowania naszych patternów są strony takie jak ta: https://regex101.com/
+Przydatnym narzędziem do testowania naszych patternów są strony takie jak ta: https://regex101.com/. Jeśli wpiszemy tam tekst oraz zdefiniujemy poszukiwany wzorzec, wszystkie wystąpienia zostaną zaznaczone w czasie rzeczywistym.
+
+
 
 
 ---
