Just another update

--- a/Python średnio zaawansowany/8. Wyrażenia regularne.md
+++ b/Python średnio zaawansowany/8. Wyrażenia regularne.md
@@ -146,13 +146,114 @@ Przydatnym narzędziem do testowania naszych patternów są strony takie jak ta:
 ---
 &nbsp;
 ### 8.3 Znaki specjalne
-.
+Patterny zazwyczaj składają się nie tylko z konkretnych znaków, które chcemy znaleźć. Najczęściej znajdziemy w nich znaki specjalne, pozwalające na tworzenie bardziej ogólnych dopasowań. Przykładowo możemy szukać znaków, które nie są cyfrą, albo takich, które stanowią granicę słowa. 
+
+Istnieje również sposób na określenie ile takich znaków ma się znaleźć, na przykład "jeden lub więcej" albo "dokładnie 4".
+
+Poniżej znajduje się zestawienie znaków specjalnych w wyrażeniach regularnych:
+
+```
+.       - Dowolny znak (oprócz nowej linii, czyli \n)
+\d      - Cyfra (0-9)
+\D      - Znak nie będący cyfrą
+\w      - Znak, będący częścią słowa, tzw. word character (a-z, A-Z, 0-9, _)
+\W      - Znak nie będący word character
+\s      - Znak biały (spacja, tab, nowa linia)
+\S      - Znak nie będący jednym z powyższych
+
+\b      - Granica słowa (granica między \w a \W)
+\B      - Znak, który nie jest granicą słowa
+^       - Początek stringa
+$       - Koniec stringa
+
+-       - Przedział (np. litery a-z)
+[]      - Określenie zbioru znaków, których szukamy
+[^ ]    - Dopasowuje znaki, których nie ma w zbiorze
+|       - Spójnik "lub"
+( )     - Służy do grupowania
+```
+
+Jeżeli chcemy określić liczbę wystąpień danego znaku, używamy:
+
+```
+*       - 0 lub więcej
++       - 1 lub więcej
+?       - 0 lub 1
+{3}     - Dokładna liczba (podana w klamrach)
+{3,4}   - Zakres od-do
+```
+
+Poniżej znajduje się kilka wywołań funkcji `find_patterns()`, które wykorzystują niektóre z powyższych znaków:
+
+```python
+find_patterns('.', "hello\nworld")
+
+# <re.Match object; span=(0, 1), match='h'>
+# <re.Match object; span=(1, 2), match='e'>
+# <re.Match object; span=(2, 3), match='l'>
+# <re.Match object; span=(3, 4), match='l'>
+# <re.Match object; span=(4, 5), match='o'>
+# <re.Match object; span=(6, 7), match='w'>
+# <re.Match object; span=(7, 8), match='o'>
+# <re.Match object; span=(8, 9), match='r'>
+# <re.Match object; span=(9, 10), match='l'>
+# <re.Match object; span=(10, 11), match='d'>
+```
+
+```python
+find_patterns('\D', "abc 123 xyz !?.")
+
+# <re.Match object; span=(0, 1), match='a'>
+# <re.Match object; span=(1, 2), match='b'>
+# <re.Match object; span=(2, 3), match='c'>
+# <re.Match object; span=(3, 4), match=' '>
+# <re.Match object; span=(7, 8), match=' '>
+# <re.Match object; span=(8, 9), match='x'>
+# <re.Match object; span=(9, 10), match='y'>
+# <re.Match object; span=(10, 11), match='z'>
+# <re.Match object; span=(11, 12), match=' '>
+# <re.Match object; span=(12, 13), match='!'>
+# <re.Match object; span=(13, 14), match='?'>
+# <re.Match object; span=(14, 15), match='.'>
+```
+
+
+```python
+find_patterns('\w', "abc 123 xyz !?.")
+
+# <re.Match object; span=(0, 1), match='a'>
+# <re.Match object; span=(1, 2), match='b'>
+# <re.Match object; span=(2, 3), match='c'>
+# <re.Match object; span=(4, 5), match='1'>
+# <re.Match object; span=(5, 6), match='2'>
+# <re.Match object; span=(6, 7), match='3'>
+# <re.Match object; span=(8, 9), match='x'>
+# <re.Match object; span=(9, 10), match='y'>
+# <re.Match object; span=(10, 11), match='z'>
+```
+
+
+
 ---
 ---
 ---
 &nbsp;
 ### 8.4 Escape character
-.
+Znaki specjalne pozwalają odnieść się do pewnych abstrakcyjnych pojęć, takich jak "początek stringa" czy "jeden lub więcej". Jednak w konsekwencji, kiedy próbujemy wyszukać znaki $, ^ czy +, nie możemy odnieść się do nich wprost.
+
+W celu znalezienia w tekście dosłownych wystąpień znaków specjalnych, używamy tzw. *escape character*. którym jest `\`. 
+
+Przykładowo, żeby w poniższym stringu odnaleźć cenę wyrażoną w dolarach:
+
+`You can by it for only 10$`
+
+należy użyć następującego patternu:
+
+`\d+\$`
+
+Zakładamy, że cena to ciąg cyfr (przynajmniej jednej). Wyszukujemy więc cyfry powtórzone jeden lub więcej razy (`\d+`) oraz dosłownie znaku "$" – czyli `\$` (a nie końca stringa).
+
+
 ---
 ---
 ---
