Just another update

--- a/Python średnio zaawansowany/8. Wyrażenia regularne.md
+++ b/Python średnio zaawansowany/8. Wyrażenia regularne.md
@@ -146,20 +146,20 @@ Przydatnym narzędziem do testowania naszych patternów są strony takie jak ta:
 ---
 &nbsp;
 ### 8.3 Znaki specjalne
-Patterny zazwyczaj składają się nie tylko z konkretnych znaków, które chcemy znaleźć. Najczęściej znajdziemy w nich znaki specjalne, pozwalające na tworzenie bardziej ogólnych dopasowań. Przykładowo możemy szukać znaków, które nie są cyfrą, albo takich, które stanowią granicę słowa. 
+Patterny zazwyczaj składają się nie tylko z konkretnych znaków, które chcemy znaleźć. Najczęściej znajdziemy w nich znaki specjalne, pozwalające na tworzenie bardziej ogólnych dopasowań. Przykładowo możemy szukać znaków, które "nie są cyfrą", albo tych stanowiących "granicę słowa". 
 
 Istnieje również sposób na określenie ile takich znaków ma się znaleźć, na przykład "jeden lub więcej" albo "dokładnie 4".
 
-Poniżej znajduje się zestawienie znaków specjalnych w wyrażeniach regularnych:
+Poniżej znajduje się zestawienie znaków specjalnych, których używamy w wyrażeniach regularnych:
 
 ```
 .       - Dowolny znak (oprócz nowej linii, czyli \n)
 \d      - Cyfra (0-9)
-\D      - Znak nie będący cyfrą
-\w      - Znak, będący częścią słowa, tzw. word character (a-z, A-Z, 0-9, _)
-\W      - Znak nie będący word character
+\D      - Znak niebędący cyfrą
+\w      - Część słowa, tzw. word character (a-z, A-Z, 0-9, _)
+\W      - Znak niebędący word character
 \s      - Znak biały (spacja, tab, nowa linia)
-\S      - Znak nie będący jednym z powyższych
+\S      - Znak niebędący znakiem białym
 
 \b      - Granica słowa (granica między \w a \W)
 \B      - Znak, który nie jest granicą słowa
@@ -245,7 +245,7 @@ W celu znalezienia w tekście dosłownych wystąpień znaków specjalnych, używ
 
 Przykładowo, żeby w poniższym stringu odnaleźć cenę wyrażoną w dolarach:
 
-`You can by it for only 10$`
+`You can buy it for only 10$`
 
 należy użyć następującego patternu:
 
