Just another update

--- a/Python średnio zaawansowany/8. Wyrażenia regularne.md
+++ b/Python średnio zaawansowany/8. Wyrażenia regularne.md
@@ -251,7 +251,7 @@ należy użyć następującego patternu:
 
 `\d+\$`
 
-Zakładamy, że cena to ciąg cyfr (przynajmniej jednej). Wyszukujemy więc cyfry powtórzone jeden lub więcej razy (`\d+`) oraz dosłownie znaku "$" – czyli `\$` (a nie końca stringa).
+Zakładamy, że cena to ciąg cyfr (przynajmniej jednej). Wyszukujemy więc cyfry powtórzone jeden lub więcej razy (`\d+`) oraz dosłownie znaku "$" – czyli `\$` (a nie końca stringa, czyli ` $`).
 
 
 ---
