Just another update

--- a/Python średnio zaawansowany/8. Wyrażenia regularne.md
+++ b/Python średnio zaawansowany/8. Wyrażenia regularne.md
@@ -251,7 +251,8 @@ należy użyć następującego patternu:
 
 `\d+\$`
 
-Zakładamy, że cena to ciąg cyfr (przynajmniej jednej). Wyszukujemy więc cyfry powtórzone jeden lub więcej razy (`\d+`) oraz dosłownie znaku "$" – czyli `\$` (a nie końca stringa, czyli `$`).
+Zakładamy, że cena to ciąg cyfr (przynajmniej jednej). Wyszukujemy więc cyfry powtórzone jeden lub więcej razy (`\d+`) oraz dosłownie znak "$" – czyli `\$` (a nie koniec stringa, czyli `$`).
+
 
 
 ---
