Just another update

--- a/Python średnio zaawansowany/8. Wyrażenia regularne.md
+++ b/Python średnio zaawansowany/8. Wyrażenia regularne.md
@@ -260,7 +260,30 @@ Zakładamy, że cena to ciąg cyfr (przynajmniej jednej). Wyszukujemy więc cyfr
 ---
 &nbsp;
 ### 8.5 Złożone patterny
-.
+Poniżej znajdują się przykłady bardziej złożonych patternów, które są kombinacją kilku znaków specjalnych:
+
+```python
+text = "Mój adres email to abc@email.com, napisz do mnie wiadomość"
+
+find_patterns('\w+@\w+\.\w+', text)
+# <re.Match object; span=(20, 33), match='abc@email.com'>
+```
+
+
+```python
+text = "Wylosowane liczby to 32, 83, 8 i 144 a także 90. Jednak to już nie jest li123czba"
+
+find_patterns(r'\b[0-9]+\b', text)
+# <re.Match object; span=(21, 23), match='32'>
+# <re.Match object; span=(25, 27), match='83'>
+# <re.Match object; span=(29, 30), match='8'>
+# <re.Match object; span=(33, 36), match='144'>
+# <re.Match object; span=(45, 47), match='90'>
+```
+
+Zwróć uwagę na r-stringa, który jest konieczny, ponieważ `\b` w Pythonie oznacza *backspace*.
+
+
 ---
 ---
 ---
